<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue">

    <!-- Logo de RideTogether corregido -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/btnStartLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:src="@android:drawable/ic_menu_directions" />

    <!-- Nota: Se eliminó el TextView duplicado del nombre ya que el logo.png lo incluye visualmente -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@color/secondary_green"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/registerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/create_now"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>